<resources>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="app_name">mini IMU</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="SelectRate">Please select output rate:</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="SelectPortMode">Please select port mode:</string>
    <string name="Finish">Finish</string>
    <string name="MagCali">MagCali</string>
    <string name="Acc">Accleration</string>
    <string name="Velocity">w</string>
    <string name="Angle">Euler angle</string>
    <string name="Mag">Magnetism</string>
    <string name="Pressure">P</string>
    <string name="Port">Port</string>
    <string name="Quater">Quaternion</string>
    <string name="AccCali">Acc Cali</string>
    <string name="AccCaliL">Acc Cali L</string>
    <string name="AccCaliR">Acc Cali R</string>
    <string name="toastCaliAcc">Calibrating, please wait for a moment!</string>
    <string name="toastCali">Calibrating, please rotate the module in all direction!</string>
    <string name="toastCaliFinish">Calibrate finished!</string>
    <string name="Rate">Rate</string>
    <string name="Save">Save</string>
    <string name="Resume">Resume</string>
    <string name="Setting">Config</string>
    <string name="ble">Bluetooth</string>
    <string name="time">Time</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="temperature">Temperature：</string>
    <string name="pressure">Pressure：</string>
    <string name="mPressure">Pressure</string>
    <string name="elevation">Elevation：</string>
    <string name="longitude_and_latitude">Latitude longitude</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="ground_velocity">Ground velocity</string>
    <string name="course">Course:</string>
    <string name="satellite_number">Positioning accuracy</string>
    <string name="data">Data</string>
    <string name="help">Help</string>
    <string name="x">X：</string>
    <string name="y">Y：</string>
    <string name="z">Z：</string>
    <string name="about">About\nV2.3</string>
    <string name="USB_HOST">Your mobile phone does not support USB HOST, please use another mobile phone to try again!</string>
    <string name="hint">Hint</string>
    <string name="Determine">OK</string>
    <string name="Bluetoothbad">Bluetooth is not available</string>
    <string name="fail_to_open">Fail to open the device!</string>
    <string name="open_device_suc">Open the device successfully!</string>
    <string name="Unauthorized_authority">Unauthorized authority</string>
    <string name="quit">Make sure to quit?</string>
    <string name="back">Back</string>
    <string name="date">Date：</string>
    <string name="mTime">Time：</string>
    <string name="scanning">Searching equipment</string>
    <string name="select_device">Select a device</string>
    <string name="none_paired">No equipment that has been matched</string>
    <string name="none_found">Undiscovered equipment</string>
    <string name="title_paired_devices">Equipment that has been paired</string>
    <string name="title_other_devices">Unpaired equipment, turn on your positioning switch!</string>
    <string name="button_scan">Search equipment</string>
    <string name="abolish">cancel</string>
    <string name="recorded_root_directory">The data has been recorded to the cell phone root directory:</string>
    <string name="open_file">Open the saved file?</string>
    <string name="Please_choose_the_model">Please select device type</string>
    <string name="Add_calibration">Acceleration Calibration</string>
    <string name="Smoothness_coefficient">Smooth Coefficient</string>
    <string name="dormancy">Sleep</string>
    <string name="ToZero">Z axis return to zero</string>
    <string name="Baud_rate">Baud Rate Setting</string>
    <string name="Installation_direction">Installation Direction</string>
    <string name="Static_detection_threshold">Static detection threshold</string>
    <string name="Measurement_bandwidth">Measurement Bandwidth</string>
    <string name="Pattern_selection">Pattern Selection</string>
    <string name="system">System</string>
    <string name="Resume_out_of_the_factory">Factory Reset</string>
    <string name="algorithm">Algorithm</string>
    <string name="Instruction_start">Instruction Start</string>
    <string name="Call_the_police">Alarm</string>
    <string name="calibration">Calibration</string>
    <string name="Magnetic_field_calibration">Magnetic Calibration</string>
    <string name="Magnetic_field_calibration_finish">Magnetic Calibration Finish</string>
    <string name="High_zero">Reset Height to 0</string>
    <string name="Gyroscope_automatic_calibration">Gyroscope Automatic Calibration</string>
    <string name="Z_axis_angle_to_zero">Reset Z-axis angle to 0</string>
    <string name="Setting_angle_reference">Set Angle Reference</string>
    <string name="Range">Range</string>
    <string name="Acceleration_range">Acceleration Range</string>
    <string name="Angular_velocity_range">Gyroscope Range</string>
    <string name="bandwidth">Bandwidth</string>
    <string name="content">Output Content</string>
    <string name="Signal_communication">Communication</string>
    <string name="retrieval_rate">Retrieval Rate</string>
    <string name="baudrate">Baudrate</string>
    <string name="address">Address</string>
    <string name="Communication_rate">Communication Rate</string>
    <string name="Port_mode">Port mode</string>
    <string name="d0_mode">D0 mode</string>
    <string name="d1_mode">D1 mode</string>
    <string name="d2_mode">D2 mode</string>
    <string name="d3_mode">D3 mode</string>
    <string name="Port_PWM_pulse_width">PWM pulse width</string>
    <string name="D0PWM_pulse_width">D0PWM pulse width</string>
    <string name="D1PWM_pulse_width">D1PWM pulse width</string>
    <string name="D2PWM_pulse_width">D2PWM pulse width</string>
    <string name="D3PWM_pulse_width">D3PWM pulse width</string>
    <string name="Port_PWM_cycle">PWM cycle</string>
    <string name="D0PWM_cycle">D0PWM cycle</string>
    <string name="D1PWM_cycle">D1PWM cycle</string>
    <string name="D2PWM_cycle">D2PWM cycle</string>
    <string name="D3PWM_cycle">D3PWM cycle</string>
    <string name="put_datal">Please enter the smoothness coefficient</string>
    <string name="end">OK</string>
    <string name="put_start">（Range 0~1000）</string>
    <string name="choose_baud_rate">Please choose the baud rate</string>
    <string name="choose_installationDirection">Please choose the installation direction</string>
    <string name="Horizontal_installation">Horizontal Installation</string>
    <string name="Vertical_installation">Vertical Installation</string>
    <string name="choose_bandwith">Please select bandwidth</string>
    <string name="choose_modle">Please select the mode</string>
    <string name="Sdt">Static detection threshold:</string>
    <string name="SixAxisAlgorithm">Six-axis algorithm</string>
    <string name="NineAxisAlgorithm">Nine-axis algorithm</string>
    <string name="choose_algorithm">Please select the algorithm:</string>
    <string name="Whether_or_not">Whether or not the instruction is started：</string>
    <string name="call_the_police">Alarm</string>
    <string name="Minimum_value_of_X_axis">MinX：</string>
    <string name="X_axis_maximum">MaxX：</string>
    <string name="Minimum_value_of_Y_axis">MinY：</string>
    <string name="Y_axis_maximum">MaxY：</string>
    <string name="KeepTime">Keep time：</string>
    <string name="Positive_and_negative_180_degrees">Positive and negative 180 degrees</string>
    <string name="Company">Company:ms</string>
    <string name="Automatic_calibration_of_helix">Automatic calibration of helix：</string>
    <string name="choose_range">Please select the acceleration range:</string>
    <string name="choose_angle">Please select the angular velocity:</string>
    <string name="output_content">Please select the output content:</string>
    <string name="SingleOutput">Single output</string>
    <string name="NotOutput">Not output</string>
    <string name="PleaseSelectTheReturnRate">Please select the return rate：</string>
    <string name="Please_enter_the_address">Please enter the address</string>
    <string name="Please_select_the_D0_port_mode">Please select the D0 port mode:</string>
    <string name="Please_select_the_D1_port_mode">Please select the D1 port mode:</string>
    <string name="Please_select_the_D2_port_mode">Please select the D2 port mode:</string>
    <string name="Please_select_the_D3_port_mode">Please select the D3 port mode:</string>
    <string name="AnalogInput">Analog input</string>
    <string name="DigitalInput">Digital input</string>
    <string name="Output_digital_high_level">Output digital high level</string>
    <string name="Output_digital_low_level">Output digital low level</string>
    <string name="Output_PWM">Output PWM</string>
    <string name="CLR_relative_posture">CLR relative posture</string>
    <string name="Please_enter_port_PWM_pulse_width">Please enter port PWM pulse width</string>
    <string name="Please_enter_the_port_PWM_cycle">Please enter the port PWM cycle</string>
    <string name="AngleVelocity">Velocity</string>
    <string name="mAngleVelocity">w</string>
    <string name="mAngle">Angle</string>
    <string name="mMag">Mag</string>
    <string name="myPressure">Pressure</string>
    <string name="mPort">Port</string>
    <string name="mQuater">q</string>
    <string name="mAcc">a</string>
    <string name="lal">Location</string>
    <string name="gv">GPSV</string>
    <string name="sn">PDOP</string>
    <string name="bt_not_enabled_leaving">Bluetooth not open</string>
    <string name="connect">Connect</string>
    <string name="data_null">Not null!</string>
    <string name="discoverable">Discoverable</string>
    <string name="main_textview">0.00</string>
    <string name="mytime">Keep time must be greater than 0!</string>
    <string name="not_connected">Not connected!</string>
    <string name="put_end">End(0~1000)</string>
    <string name="send">Send</string>
    <string name="shop_name">Wit Motion</string>
    <string name="title_connected_to">Connected:</string>
    <string name="title_connecting">Connecting:</string>
    <string name="title_not_connected">Disconnect</string>
    <string name="xmax_null">X max cannot be null!</string>
    <string name="xmin_null">X min cannot be null!</string>
    <string name="xy_time">Keep time cannot be null!</string>
    <string name="ymax_null">Y max cannot be null!</string>
    <string name="ymin_null">Y min cannot be null!</string>
    <string name="Voltage">Voltage:</string>
    <string name="Version">Version:</string>
    <string name="WitWebsite">http://www.wit-motion.com/english.php</string>
    <string name="WikiWebsite">https://wiki.wit-motion.com/english/doku.php</string>
    <string name="acc_Chart">Acceleration chart</string>
    <string name="w_Chart">Angle rate chart</string>
    <string name="angle_Chart">Angle chart</string>
    <string name="mag_chart">Magnetic chart</string>
    <string name="port_chart">Port chart</string>
    <string name="pressure_chart">Pressure chart</string>
    <string name="quaternion_chart">Quaternion chart</string>
    <string name="Date">Data:</string>
    <string name="Time">Time:</string>
    <string name="please_choose_install_derection">Please choose install derection:</string>
    <string name="data_output">Data output:</string>
    <string name="pause">Pause</string>
</resources>