<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/spacerBar"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/accent_1" />

    <RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="@color/accent_1"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/sideMenuButton"
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:onClick="onSideMenuButtonClick"
            android:background="@drawable/icon_musen" />

        <Button
            android:id="@+id/bluetoothScanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="onBluetoothScanButtonClick"
            android:background="@color/accent_1"
            android:text="@string/menu_scan"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/data"
            android:textColor="#fff"
            android:textSize="20sp" />

    </RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/tabBar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/accent_1"
        android:orientation="horizontal"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/systemTabBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#33b5e5"
                android:onClick="onTabBtnClick"
                android:text="@string/system"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/accelerationTabBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#33b5e5"
                android:onClick="onTabBtnClick"
                android:text="@string/mAcc"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/angularVelocityTabBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#33b5e5"
                android:onClick="onTabBtnClick"
                android:text="@string/mAngleVelocity"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/angleTabBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#0099cc"
                android:onClick="onTabBtnClick"
                android:text="@string/mAngle"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/magneticFieldTabBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#33b5e5"
                android:onClick="onTabBtnClick"
                android:text="@string/mMag"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/portTabBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#33b5e5"
                android:onClick="onTabBtnClick"
                android:text="@string/mPort"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/pressureTabBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#33b5e5"
                android:onClick="onTabBtnClick"
                android:text="@string/myPressure"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/locationTabBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#33b5e5"
                android:onClick="onTabBtnClick"
                android:text="@string/lal"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/gpsVelocityTabBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#33b5e5"
                android:onClick="onTabBtnClick"
                android:text="@string/gv"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/quaternionTabBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#33b5e5"
                android:onClick="onTabBtnClick"
                android:text="@string/mQuater"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/satelliteNumberTabBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#33b5e5"
                android:onClick="onTabBtnClick"
                android:scrollbars="horizontal"
                android:text="@string/sn"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </LinearLayout>
    </HorizontalScrollView>


    <ScrollView
        android:id="@+id/dataArea"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Switch
                android:id="@+id/dataSwitch"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginRight="20dp"
                android:checked="true"
                android:gravity="right|center_vertical"
                android:onClick="onOutputSwitchClick"
                android:text="@string/data_output" />

            <include
                android:id="@+id/mLayout"
                layout="@layout/lay_bt_graph"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />
        </LinearLayout>
    </ScrollView>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nv_layout"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <include layout="@layout/lay_draw"></include>

</com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>