<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/circle_corner_button"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="30dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/put_datal"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_putStart"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/circle_corner_button"
        android:hint="@string/put_start"
        android:inputType="number"
        android:maxLength="4"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/bg_f0f0f0"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_abolish"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/button_gray"
            android:text="@string/abolish"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bt_save"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/button_blue"
            android:text="@string/end"
            android:textColor="@color/white" />


    </LinearLayout>
</LinearLayout>